<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_car_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamharambe.agris.aidll.Activities.CarDetails">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/car_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/allCarsSpinner"
        android:layout_below="@+id/carNameLabel"
        android:layout_alignParentStart="true" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/carImage"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/detailsPanel"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:id="@+id/carNameLabel"
        android:layout_below="@+id/appbar"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/detailsPanel"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/allCarsSpinner"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="164dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/price"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:id="@+id/priceLabel"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:id="@+id/priceText" />

            <TextView
                android:text="@string/door_count"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:id="@+id/doorsCountLabel"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:id="@+id/doorsCountText"/>

            <TextView
                android:text="@string/release_year"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:id="@+id/yearLabel"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:id="@+id/yearText" />

            <TextView
                android:text="@string/power"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:id="@+id/powerLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:id="@+id/powerText" />

            <TextView
                android:text="@string/weight"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:id="@+id/textView18" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:id="@+id/weightText" />

        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
             android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:text="@string/body_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_dark"
                android:id="@+id/bodyTypeLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:id="@+id/bodyTypeText" />

            <TextView
                android:text="@string/fuel_tank_capacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="15sp"
                android:id="@+id/fuelTankLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:id="@+id/fuelTankText" />

            <TextView
                android:text="@string/fuel_type"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:id="@+id/fuelTypeLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:id="@+id/fuelTypeText" />

            <TextView
                android:text="@string/top_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_dark"
                android:id="@+id/topSpeedLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:id="@+id/topSpeedText" />

            <TextView
                android:text="@string/full_weight"
                android:textSize="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/maxWeightLabel"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/maxWeightText"
                android:textColor="@android:color/holo_green_light" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
