<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.teamharambe.agris.aidll.Activities.ResultsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/resultsToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appbar">

        <TextView
            android:text="@string/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/textView" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selected_car_name"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="?android:attr/colorMultiSelectHighlight" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selected_car_model"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="?android:attr/colorPressedHighlight" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="142dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:color/background_light"
                android:id="@+id/main_car_image" />

            <ImageView
                android:layout_width="138dp"
                android:layout_height="107dp"
                app:srcCompat="@drawable/gold"
                android:id="@+id/gold_medal" />
        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:id="@+id/detailsPanel"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/allCarsSpinner"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="164dp"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/price"
                    android:layout_width="match_parent"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:id="@+id/priceLabel"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:id="@+id/priceText" />

                <TextView
                    android:text="@string/door_count"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:id="@+id/doorsCountLabel"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:id="@+id/doorsCountText"/>

                <TextView
                    android:text="@string/release_year"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:id="@+id/yearLabel"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:id="@+id/yearText" />

                <TextView
                    android:text="@string/power"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:id="@+id/powerLabel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:id="@+id/powerText" />

                <TextView
                    android:text="@string/weight"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:id="@+id/textView18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:id="@+id/weightText" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/body_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@android:color/holo_green_dark"
                    android:id="@+id/bodyTypeLabel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:id="@+id/bodyTypeText" />

                <TextView
                    android:text="@string/fuel_tank_capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="15sp"
                    android:id="@+id/fuelTankLabel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:id="@+id/fuelTankText" />

                <TextView
                    android:text="@string/fuel_type"
                    android:layout_width="match_parent"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_dark"
                    android:id="@+id/fuelTypeLabel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:id="@+id/fuelTypeText" />

                <TextView
                    android:text="@string/top_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@android:color/holo_green_dark"
                    android:id="@+id/topSpeedLabel" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:id="@+id/topSpeedText" />

                <TextView
                    android:text="@string/full_weight"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/maxWeightLabel"
                    android:textColor="@android:color/holo_green_dark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/maxWeightText"
                    android:textColor="@android:color/holo_green_light" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:text="@string/honorable_mention"
            android:layout_marginTop="60sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/honorable_mention_label" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/honorable_mention_text" />

        <FrameLayout
            android:layout_width="200sp"
            android:layout_height="130sp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:color/background_light"
                android:id="@+id/honorable_car_image" />

            <ImageView
                android:layout_width="92dp"
                android:layout_height="106dp"
                app:srcCompat="@drawable/you_tried"
                android:id="@+id/you_tried_medal" />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
